fixed the overflow error

--- a/src/sass/components/cvbuilder.scss
+++ b/src/sass/components/cvbuilder.scss
@@ -1,17 +1,16 @@
 .cvbuilder {
   min-height: 130vh;
-  max-height: auto;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  border: solid green;
+  max-height: 200vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   #personal {
     position: relative;
     margin-top: 5rem;
     display: grid;
-    height: 40rem;
+    height: 45rem;
     width: 50%;
-    justify-self: center;
     border-radius: 1rem;
     background-color: #30b3ff;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
@@ -47,7 +46,7 @@
     }
 
     h1 {
-      margin-top: 2rem;
+      margin-top: 1rem;
       margin-left: 5%;
       font-size: 2rem;
     }
@@ -78,13 +77,9 @@
   }
 
   #education {
-    transition: 0.7s ease-in-out;
-    height: 5rem;
     position: relative;
     margin-top: 5rem;
-    //display: grid;
     width: 50%;
-    justify-self: center;
     border-radius: 1rem;
     background-color: #30b3ff;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
@@ -95,40 +90,41 @@
 
     .arrow {
       cursor: pointer;
-      top: 1.5rem;
+      top: 0.5rem;
       left: 95%;
       position: absolute;
       font-size: 2rem;
     }
 
     h1 {
-      margin-top: 2rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
       margin-left: 5%;
       font-size: 2rem;
     }
 
     .forms {
-      height: 90%;
+      height: 45rem;
       display: grid;
-
 
       label {
         font-size: 1.5rem;
+        margin-top: 1rem;
         margin-left: 5%;
       }
 
       .dates {
         display: flex;
-  
+
         .date {
           width: 50%;
           display: grid;
-          // border: .1px solid red;
-  
+
           label {
             margin-left: 10%;
+            margin-bottom: 1rem;
           }
-  
+
           input {
             width: 80%;
           }
@@ -151,6 +147,181 @@
 
         &:focus {
           border: 2px solid #3da1ff;
+        }
+      }
+
+      .footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .btn {
+          background-color: #ffffff;
+          border: 0;
+          border-radius: 0.5rem;
+          box-sizing: border-box;
+          color: #111827;
+          font-family: "Bricolage+Grotesque", "Inter var", ui-sans-serif,
+            system-ui, -apple-system, system-ui, "Segoe UI", Roboto,
+            "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+            "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+            "Noto Color Emoji";
+          font-size: 1.3rem;
+          font-weight: 600;
+          line-height: 1.25rem;
+          padding: 0.75rem 1rem;
+          text-align: center;
+          text-decoration: none #d1d5db solid;
+          text-decoration-thickness: auto;
+          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+            0 1px 2px 0 rgba(0, 0, 0, 0.06);
+          cursor: pointer;
+          user-select: none;
+          -webkit-user-select: none;
+          touch-action: manipulation;
+          margin: 0 3rem;
+          width: 6rem;
+        }
+
+        .btn:focus {
+          outline: 2px solid transparent;
+          outline-offset: 2px;
+        }
+
+        .btn:focus-visible {
+          box-shadow: none;
+        }
+      }
+    }
+  }
+
+  #experience {
+    position: relative;
+    margin-top: 5rem;
+    width: 50%;
+    border-radius: 1rem;
+    background-color: #30b3ff;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+
+    @include respond(phone) {
+      width: 90%;
+    }
+
+    .arrow {
+      cursor: pointer;
+      top: 0.5rem;
+      left: 95%;
+      position: absolute;
+      font-size: 2rem;
+    }
+
+    h1 {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      margin-left: 5%;
+      font-size: 2rem;
+    }
+
+    .forms {
+      height: 45rem;
+      display: grid;
+
+      label {
+        font-size: 1.5rem;
+        margin-top: 1rem;
+        margin-left: 5%;
+      }
+
+      .dates {
+        display: flex;
+
+        .date {
+          width: 50%;
+          display: grid;
+
+          label {
+            margin-left: 10%;
+            margin-bottom: 1rem;
+          }
+
+          input {
+            width: 80%;
+          }
+        }
+      }
+
+      input {
+        height: 3rem;
+        width: 90%;
+        justify-self: center;
+        background-color: fcfeff;
+        outline: none;
+        border: 2px solid #333;
+        background-color: white;
+        border-radius: 0.5rem;
+        font-size: 1.5rem;
+        display: block;
+        box-sizing: border-box;
+        padding: 0.5rem 0.75rem;
+
+        &:focus {
+          border: 2px solid #3da1ff;
+        }
+      }
+
+      textarea {
+        resize: vertical;
+        width: 90%;
+        min-height: inherit;
+        max-height: auto;
+        justify-self: center;
+        border-radius: 0.5rem;
+        font-size: 1.5rem;
+        display: block;
+        box-sizing: border-box;
+        padding: 0.5rem 0.75rem;
+      }
+
+      .footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .btn {
+          background-color: #ffffff;
+          border: 0;
+          border-radius: 0.5rem;
+          box-sizing: border-box;
+          color: #111827;
+          font-family: "Bricolage+Grotesque", "Inter var", ui-sans-serif,
+            system-ui, -apple-system, system-ui, "Segoe UI", Roboto,
+            "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+            "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+            "Noto Color Emoji";
+          font-size: 1.3rem;
+          font-weight: 600;
+          line-height: 1.25rem;
+          padding: 0.75rem 1rem;
+          text-align: center;
+          text-decoration: none #d1d5db solid;
+          text-decoration-thickness: auto;
+          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+            0 1px 2px 0 rgba(0, 0, 0, 0.06);
+          cursor: pointer;
+          user-select: none;
+          -webkit-user-select: none;
+          touch-action: manipulation;
+          margin: 0 3rem;
+          width: 6rem;
+        }
+
+        .btn:focus {
+          outline: 2px solid transparent;
+          outline-offset: 2px;
+        }
+
+        .btn:focus-visible {
+          box-shadow: none;
         }
       }
     }
