--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -10,4 +10,5 @@ html,
 body {
   font-size: 62.5%;
   box-sizing: border-box;
+  font-family: Bricolage + Grotesque, sans-serif;
 }
